--- a/aidin/style.css
+++ b/aidin/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    list-style: none;
 }
 header{
     display: flex;
@@ -19,4 +20,46 @@ header{
     justify-content: right;
     align-items: center;
     gap: 50px;
+}
+#home{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.photo{
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.aboutme{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.aboutme div{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+}
+.aboutme h1{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    font-weight: bold;
+    font-size: 100px;
+}
+.aboutme p{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    font-weight: bold;
+    font-size: 50px;
 }
